objects/dfsle__EnvelopeConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>dfsle__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepare</fullName>
                    <default>true</default>
                    <label>Prepare</label>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__AddSourceDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Salesforce source documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__AddSourceRecipients__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add Salesforce source recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__CustomFields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__DFSTemplateId__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Migrated DFS Template ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DFS Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__DocuSignId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DocuSign Template ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__EmailMessage__c</fullName>
        <description>Email Message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__EmailSubject__c</fullName>
        <description>Email Subject</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__ExpireAfterDays__c</fullName>
        <label>Expire/void envelope in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__ExpireWarnDays__c</fullName>
        <label>Warn of expiration in N day(s) prior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Expires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire/void envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__IsDraft__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__IsQuickSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quick Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__MergeFields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Merge Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Notifications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__ObjectType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__RemindAfterDays__c</fullName>
        <label>Send reminder in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__RemindFrequencyDays__c</fullName>
        <label>Remind every N day(s) until complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Remind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remind signers via email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__SenderDocuSignUserName__c</fullName>
        <formula>dfsle__Sender__r.dfsle__Username__c</formula>
        <label>Sender DocuSign UserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__SenderPermissions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Permissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__SenderSalesforceUserName__c</fullName>
        <formula>dfsle__Sender__r.Username</formula>
        <label>Sender Salesforce UserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DocuSign user used for sending the template.</description>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSign_Envelope_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__SendingExperience__c</fullName>
        <label>Sending Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>edit</fullName>
                    <default>true</default>
                    <label>edit</label>
                </value>
                <value>
                    <fullName>quickSend</fullName>
                </value>
                <value>
                    <fullName>tag</fullName>
                </value>
                <value>
                    <fullName>send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__ShowChatterSettings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Chatter settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowEmailMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show email message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowEmailSubject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show email subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowRemindExpire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show remind and expire settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowSendButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show send button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowTagButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show tag button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__TemplateType__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Embedded</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocuSign Envelope Template</label>
    <listViews>
        <fullName>dfsle__All</fullName>
        <columns>NAME</columns>
        <columns>dfsle__SourceObject__c</columns>
        <columns>dfsle__IsDraft__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>